<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AjoutActivity" >

    <TextView
        android:id="@+id/tvnom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ctnc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvnom"
        android:layout_marginTop="101dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etnom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nc" 
            android:layout_marginBottom="10dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numcontc" 
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnajo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajtbtn" />

    </LinearLayout>

</RelativeLayout>